# wifi

./: CMakeLists.txt  README.md
src/adapter/: IWiFiAdapter.h  Nl80211Adapter.cpp  Nl80211Adapter.h  SystemIWLAdapter.cpp  SystemIWLAdapter.h
src/app/: main.cpp
src/config/: ConfigLoader.cpp  ConfigLoader.h  config.yaml
src/core/: WifiScanner.cpp  WifiScanner.hpp
src/model/: WiFiNetwork.hpp
src/utils/: Logger.cpp  Logger.h
